--- a/manifest-allocations.yml
+++ b/manifest-allocations.yml
@@ -6,7 +6,8 @@ applications:
   routes:
   - route: allocations-mamuni-pal.cfapps.io
   path: Applications/AllocationsServer/bin/Release/netcoreapp2.1/publish
-  env:
-    REGISTRATION_SERVER_ENDPOINT: http://registration-mamuni-pal.cfapps.io/
+  # env:
+  #   REGISTRATION_SERVER_ENDPOINT: http://registration-mamuni-pal.cfapps.io/
   services:
   - tracker-allocations-database
+  - tracker-service-registry
