--- a/manifest-timesheets.yml
+++ b/manifest-timesheets.yml
@@ -6,7 +6,8 @@ applications:
   routes:
   - route: timesheets-mamuni-pal.cfapps.io
   path: Applications/TimesheetsServer/bin/Release/netcoreapp2.1/publish
-  env:
-    REGISTRATION_SERVER_ENDPOINT: http://registration-mamuni-pal.cfapps.io/
+  # env:
+  #   REGISTRATION_SERVER_ENDPOINT: http://registration-mamuni-pal.cfapps.io/
   services:
   - tracker-timesheets-database
+  - tracker-service-registry
