--- a/manifest-backlog.yml
+++ b/manifest-backlog.yml
@@ -8,8 +8,11 @@ applications:
   path: Applications/BacklogServer/bin/Release/netcoreapp2.1/publish
   # env:
   #   REGISTRATION_SERVER_ENDPOINT: http://registration-mamuni-pal.cfapps.io/
+  env:
+    GRANT_TYPE: client_credentials
   services:
-  - tracker-backlog-database
+  - tracker-allocations-database
   - tracker-service-registry
   - tracker-circuit-breaker-dashboard
   - tracker-amqp
+  - tracker-sso
