--- a/Applications/AllocationsServer/appsettings.json
+++ b/Applications/AllocationsServer/appsettings.json
@@ -25,10 +25,21 @@
                 "isolation": {
                     "thread": {
                         "timeoutInMilliseconds": 5000
+                        }
                     }
                 }
             }
         }
-    }
-}
+    },
+   "spring": {
+       "application": {
+           "name": "allocations-server"
+       },
+       "cloud": {
+           "config": {
+               "failFast" : true,
+               "uri": "http://localhost:8777"
+           }
+       }
+   }
 }
